<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:text="Fliptutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:id="@+id/krushLogo"
        tools:text="Fliptutor"
        android:textSize="100sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_user_email"
        android:text="gregpmillr@gmail.com"
        android:textAlignment="center"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:nextFocusUp="@id/username"
        android:nextFocusLeft="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_user_password"
        android:text="password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_marginBottom="71dp"
        android:layout_above="@+id/submitLogin"
        android:layout_alignStart="@+id/username" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/submitLogin"
        android:layout_alignStart="@+id/submitLogin"
        android:layout_marginBottom="18dp">
        <RadioButton android:id="@+id/radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_student"/>
        <RadioButton android:id="@+id/radio_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/login_tutor"/>


    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitLogin"
        android:text="Login"
        android:background="@drawable/button_main"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:minWidth="170dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/bottom_bar_color"
        android:layout_marginBottom="97dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text=""
        android:textColor="#990000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/invalid" />


</RelativeLayout>