<?xml version="1.0" encoding="utf-8"?>
<!--
Source:
Regmi, P. (2016). Android Material Design Profile Screen XML UI Design. Viral Android – Tutorials, Examples, UX/UI Design.
Retrieved 15 March 2017,
from http://www.viralandroid.com/2016/03/android-material-design-profile-screen-xml-ui-design.html
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tutor_details_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_background" />

        <!-- Source: https://github.com/hdodenhof/CircleImageView -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tutor_details_profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/tutor_details_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile_circle"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_icon"
            />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutor_details_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tutor_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:gravity="center">

            <RatingBar
                android:id="@+id/tutor_details_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyle"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/ratingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_details_school"
                android:text="@string/school_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:id="@+id/tutor_details_school_label"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_details_school"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_details_rate"
                android:text="@string/rate_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:id="@+id/tutor_details_rate_label"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_details_rate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_details_location"
                android:text="@string/tutoring_location_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:id="@+id/tutor_details_location_label"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_details_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_details_courses"
                android:text="@string/select_courses_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:id="@+id/tutor_details_courses_label"
                android:textColor="@color/colorPrimary"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp"
                android:id="@+id/tutor_details_courses"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_details_time_slots"
                android:text="@string/select_time_slot_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:id="@+id/tutor_details_time_slots_label"
                android:textColor="@color/colorPrimary"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp"
                android:id="@+id/tutor_details_time_slots"
                android:layout_margin="5dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tutor_details_book_button"
                android:text="@string/book_tutor_button_text"
                android:background="@drawable/button_main"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:minWidth="170dp"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/bottom_bar_color"/>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>
