<?xml version="1.0" encoding="utf-8"?>
<!--
Source:
Regmi, P. (2016). Android Material Design Profile Screen XML UI Design. Viral Android – Tutorials, Examples, UX/UI Design.
Retrieved 15 March 2017,
from http://www.viralandroid.com/2016/03/android-material-design-profile-screen-xml-ui-design.html
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tutor_profile_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_background" />

        <!-- Source: https://github.com/hdodenhof/CircleImageView -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tutor_profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/tutor_profile_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile_circle"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_icon"
            />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutor_profile_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/edit_profile_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_edit_black_24dp"/>

            <TextView
                android:id="@+id/tutor_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tutor_profile_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_email"
                android:text="@string/school_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tutor_profile_school_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_school"
                android:text="@string/profile_email_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_school"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

            <TextView
                android:id="@+id/tutor_profile_rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/tutor_rate"
                android:text="@string/rate_label"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tutor_rate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:elevation="3dp"
                android:padding="20dp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
